ejemplos/despliegues/namespace-bookinfo.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: bookinfo
