ejemplos/despliegues/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      #initContainers: # Scripts
      containers: # Servicios o Demonios
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-servicio
spec:
  selector:
    app: nginx
  ports:
    - name: http-web
      protocol: TCP
      port: 93
      targetPort: 80
---
